static/style.css
/* Style reset */
html,
body,
div,
span,
applet,
object,
iframe,
h1, h2, h3, h4, h5, h6,
p, a, img,
form, label, legend,
table, tbody, tfoot, thead, tr, th,td {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-weight: inherit;
  font-style: inherit;
  font-size: 100%;
  font-family: inherit;
  vertical-align: baseline;
}
body {
  line-height: 1;
  color: black;
  background: white;
}
li {
  line-height: 133%;
}
p {
  margin-top: 2ex;
  margin-bottom: 2ex;
}

table {
  border-collapse: separate;
  border-spacing: 0;
}
caption, th, td {
  text-align: left;
  font-weight: normal;
}

/*************************************************************************
 * Some global definitions 
 */

body {
  background: #fff;
  line-height: 120%:
}

body, th, td {
  font-family: sans-serif;
  font-size: 15px;
  font-size: 14px;
  padding: 0;
  margin: 0;
}

.page,
.topbar_content {
  max-width: 1130px;
  margin: 0 auto;
}

table {
  margin-top: 1ex;
}

body, a {
  color: #000;
}

img {
  border: none;
}

table {
  border-collapse: collapse;
  border: none;
}

td, th {
  padding: 0.5ex 0.5em 0.5ex 0em;
}

td {
  vertical-align: top;
}

th {
  vertical-align: bottom;
  font-weight: bold;
}

a.active {
  color: #fff; 
}

.revoked {
  text-decoration: line-through;
}

.highlighted {
  background-color: #fa7;
  color: #000;
}

.admin_only {
  font-style: italic;
}

h1 {
  font-size: 150%;
}

h2 {
  font-size: 125%;
}

.inline {
  display: inline;
}

/*************************************************************************
 * Notices, warnings and errors
 */

.layout_notice, .layout_error, .layout_warning {
  background: #fff;
  font-weight: bold;
  line-height: 1.7em;
  -moz-opacity:0.7;
}

.slot_notice, .slot_warning, .slot_error {
  padding-left: 1em;
}

.slot_notice {
  background-color: #cfc;
  color: #040;
}

.slot_warning {
  background-color: #fec;
  color: #420;
}

.slot_error {
  background-color: #fcc;
  color: #400;
}

/*************************************************************************
 * Navigation, search and language chooser bar 
 */

.topbar {
  background-color: #333;
  background-image: -webkit-gradient(linear, left top, left bottom, 
    color-stop(0%, #888), color-stop(25%,#333)
  );
  font-size: 90%;
  box-shadow: #aaa 0 0 5px;
  overflow: hidden;
  -mox-box-shadow: #aaa 0 0 5px;
  -webkit-box-shadow: #aaa 0 0 5px;
  border-top: 1px solid #333;
  line-height: 30px;

}

.topbar .logolf {
  margin-left: 6px;
  font-weight: bold;
}

.topbar .instance_name,
.topbar a {
  color: #eee;
  line-height: 30px;
}

.topbar  a:hover {
  background-color: #eee;
  color: #000;
}

.navigation {
  background-color: #333;
  line-height: 200%;
}

.topbar img {
  margin-right: 0.5em;
  vertical-align: middle;
}

.topbar a,
.topbar .member_menu span {
  padding: 0 0.5em;
  float: left;
  display: block;
  white-space: nowrap;
}

form.unit_selector {
  display: inline;
}

.topbar .navigation_right {
  float: right;
  padding-right: 1%;
}

.member_menu {
  float: right;
}

#member_menu {
  position: absolute;
  right: 20px;
  top: 19px;
}

#member_menu {
  display: none;
}

.member_menu:hover #member_menu {
  display: block;
}

#member_menu ul {
  list-style: none;
}

#member_menu li span {
  background-color: #333;
  line-height: 200%;
  display: block;
  width: 15em;
  color: #fff;
}

  

#member_menu li a {
  background-color: #333;
  line-height: 200%;
  display: block;
  width: 15em;
}

#member_menu a:hover {
  background-color: #eee;
  color: #000;
}


/*************************************************************************
 * Title of current page including path and actions
 */

.slot_title {
  font-size: 120%;
  font-weight: bold;
  margin-left: 10px;
  margin-right: 10px;
  margin-top: 1ex;
}

.page_head .actions {
  margin-left: 10px;
  margin-top: 0.5ex;
  margin-bottom: 1ex;
}

.slot_head {
  background-color: #fff;
  margin: 0px 10px 2ex 10px;
  border: 1px solid #aaa;
  border-radius: 0 0 8px 8px;
}

.page_head .title,
.issue .context,
.issue .title,
.initiative_head .title {
  padding: 8px 10px 2px 10px;
}

.page_head .unit_head .content,
.page_head .area_head .content,
.issue .content,
.initiative_head .content {
  padding: 2px 10px 8px 10px;
}

.page_head .initiative_list,
.issue .initiative_list {
  padding-left: 8px;
}

.issue .content.actions {
  margin-bottom: 1ex;
}



.page_head .title,
.issue .title,
.initiative_head .title {
  font-weight: bold;
  font-size: 120%;
}

.page_head .unit_head .title .extra,
.page_head .area_head .title .extra,
.issue .title .extra {
  margin-left: 0.7em;
  font-size: 75%;
}

.page_head .unit_head .content,
.page_head .area_head .content,
.page_head .area_head .content a,
.page_head .issue .content.actions,
.page_head .issue .content.actions a,
.issues .issue .content.actions,
.issues .issue .content.actions a {
  color: #777;
}

.page_head .unit_head .title,
.page_head .area_head .title,
.issue .title {
  background-color: #eee;
  background-image: linear-gradient(top, #eee 0%, #f7f7f7 10%, #fff 100%);
  background-image: -o-linear-gradient(top, #eee 0%, #f7f7f7 10%, #fff 100%);
  background-image: -moz-linear-gradient(top, #eee 0%, #f7f7f7 10%, #fff 100%);
  background-image: -webkit-linear-gradient(top, #eee 0%, #f7f7f7 10%, #fff 100%);
  background-image: -ms-linear-gradient(top, #eee 0%, #f7f7f7 10%, #fff 100%);
}

.page_head .area_head .title,
.page_head .issue .title {
  border-top: 1px solid #ddd;
}


.delegation_info {
  float: right;
  text-decoration: none;
  padding: 5px;
  border-radius: 0px 5px 0px 5px;
}

.delegation_arrow {
  vertical-align: middle;
}

.delegation_info .link {
  text-decoration: underline;
  color: #aaa;
}

.delegation_info:hover {
  background-color: #ddd;
}

.delegation_info .micro_avatar {
  border: 2px solid #fff;
}

.delegation_info .micro_avatar.highlighted {
  border: 2px solid #fa0;
}


.member_list .member_image_avatar {
  float: left;
  margin-right: 0.5em;
}
/* ... */

